fixed font/alignment bugs

--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -7,7 +7,12 @@
   align-items: center;
   gap: 4px;
 }
-
+.product-intro-details-btn-3 {
+  border: 2px solid #0030e3;
+  height: 50px;
+  padding: 13px;
+  border-radius: 5px;
+}
 .product-intro-details-right {
   margin-bottom: 2.5rem;
 }
